--- a/src/pug/chunk/education.pug
+++ b/src/pug/chunk/education.pug
@@ -14,10 +14,10 @@ div.education
                         h3 bachelor: Applied mathematics and informatics
                         span Sep 2023 - Jul 2027
                     h4 Russian-Armenian University.
-                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
+                    //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
                 li(data-aos="fade-up" data-aos-duration="3000")
                     div.d-flex.justify-content-between
                         h3 college: Programming in computer systems
                         span Sep 2019 - Jul 2022
                     h4 College of Economics and Computer Science of UlSTU
-                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
+                    //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
