--- a/src/pug/layout/app.pug
+++ b/src/pug/layout/app.pug
@@ -8,10 +8,11 @@ html(lang="en")
         link(rel="stylesheet", href="css/main.min.css")
         script(src="js/main.js") 
     body 
-        div(class="main-wrapper bg-dark text-light")
+        div(class="main-wrapper bg-dark text-light") 
             block page
-        div(class="modal-wrapper d-none")
-            block modal
+        //- need to change d-block on d-none
+        //- div(class="modal-wrapper d-block")
+        block modal
 
         
 
