replace code of modal into utils/modal.pug

--- a/src/pug/chunk/careers.pug
+++ b/src/pug/chunk/careers.pug
@@ -9,7 +9,7 @@ div.careers
         
         div.timeline
             ul.clickable-list
-                li(data-aos="fade-up", data-aos-duration="3000", data-bs-toggle="modal", data-bs-target="#exampleModal2")
+                li(data-aos="fade-up", data-aos-duration="3000", data-bs-toggle="modal", data-bs-target="#alphardModal")
                     div.d-flex.justify-content-between
                         h3 Крупный дистрибутор аудио оборудования
                         span сентябрь 2022 — апрель 2024
@@ -24,7 +24,7 @@ div.careers
                         span.tech-link.badge.bg-success Pandas
                         span.tech-link.badge.bg-primary Docker
                         span.tech-link.badge.bg-primary CI-CD
-                li(data-aos="fade-up" data-aos-duration="3000" data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                li(data-aos="fade-up" data-aos-duration="3000" data-bs-toggle="modal" data-bs-target="#doskiModal")
                     div.d-flex.justify-content-between
                         h3 Сеть общественного питания
                         span март 2022 — сентябрь 2022
@@ -36,7 +36,7 @@ div.careers
                         span.tech-link.badge.bg-warning JQuery
                         span.tech-link.badge.bg-danger Svelte
                         span.tech-link.badge.bg-secondary PostgreSQL
-                li(data-aos="fade-up" data-aos-duration="3000" data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                li(data-aos="fade-up" data-aos-duration="3000" data-bs-toggle="modal" data-bs-target="#marketingBotModal")
                     div.d-flex.justify-content-between
                         h3 Маркетинговый телеграм бот
                         span ноябрь 2023
