fixes for workflows

--- a/src/pug/chunk/careers.pug
+++ b/src/pug/chunk/careers.pug
@@ -5,7 +5,7 @@ div.careers
             p.careers__text Open to work now. Работал над следующими проектами для фирмы "Online Solutions"
         div.col-md-5
         div.col-md-4.careers__right-block(data-aos="fade-up" data-aos-duration="3000")
-            img(src="/img/work.png", class="careers__picture", alt="careers", srcset="")
+            img(src="./img/work.png", class="careers__picture", alt="careers", srcset="")
         
         div.timeline
             ul.clickable-list
