add information about portfolio

--- a/src/pug/chunk/careers.pug
+++ b/src/pug/chunk/careers.pug
@@ -1,5 +1,5 @@
 div.careers 
-    h2.title Work experience
+    h2.title Опыт работы
     div.row.my-3.pb-3.bottom-line
         div.col-md-3.careers__left-block(data-aos="fade-up" data-aos-duration="3000")
             p.careers__text Open to work now. Работал над следующими проектами для фирмы "Online Solutions"
