--- a/src/pug/chunk/education.pug
+++ b/src/pug/chunk/education.pug
@@ -1,9 +1,10 @@
 div.education 
-    h2.title Education
+    h2.title Образование
     div.row.my-3.pb-3.bottom-line
 
         div.col-md-3.education__left-block(data-aos="fade-up" data-aos-duration="3000")
-            p.education__text Coninue to learn nowdays. Interested in Artificial Intelegence and Mathematics.
+            p.education__text Продолжаю учиться и по сей день. Заинтересован в освоении машинного обучения
+            //- p.education__text Coninue to learn nowdays. Interested in Artificial Intelegence and Mathematics.
         div.col-md-5
         div.col-md-4.education__right-block(data-aos="fade-up" data-aos-duration="3000")
             img(src="./img/education.png", class="education__picture", alt="", srcset="")
@@ -11,13 +12,27 @@ div.education
             ul
                 li(data-aos="fade-up" data-aos-duration="3000")
                     div.d-flex.justify-content-between
-                        h3 bachelor: Applied mathematics and informatics
-                        span Sep 2023 - Jul 2027
-                    h4 Russian-Armenian University.
+                        h3 высшее: Прикладная математика и информатика
+                        span сен 2023 - июль 2027
+                    h4 Российско-Армянский университет.
                     //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
                 li(data-aos="fade-up" data-aos-duration="3000")
                     div.d-flex.justify-content-between
-                        h3 college: Programming in computer systems
-                        span Sep 2019 - Jul 2022
-                    h4 College of Economics and Computer Science of UlSTU
+                        h3 колледж: Программирование в компьютерных системах
+                        span сен 2019 - июль 2022
+                    h4 Колледж экономики и информатики УлГТУ
                     //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
+
+
+                //- li(data-aos="fade-up" data-aos-duration="3000")
+                //-     div.d-flex.justify-content-between
+                //-         h3 bachelor: Applied mathematics and informatics
+                //-         span Sep 2023 - Jul 2027
+                //-     h4 Russian-Armenian University.
+                //-     //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
+                //- li(data-aos="fade-up" data-aos-duration="3000")
+                //-     div.d-flex.justify-content-between
+                //-         h3 college: Programming in computer systems
+                //-         span Sep 2019 - Jul 2022
+                //-     h4 College of Economics and Computer Science of UlSTU
+                //-     //- p Lorem ipsum dolor sit amet consectetur adipisicing elit. Id similique nesciunt natus autem. Beatae eligendi, consequatur ad illum inventore asperiores!
