--- a/src/pug/chunk/portfolio.pug
+++ b/src/pug/chunk/portfolio.pug
@@ -1,41 +1,45 @@
 div.portfolio 
-    h2.title Portfolio
+    h2.title Личные проекты (образовательные и экспериментальные)
     //- div.d-flex.my-3.pb-3.flex-wrap
     //- div.card-group.my-3.pb-3.flex-wrap
     div.row.row-cols-1.row-cols-md-3.g-4.my-3.pb-3
-        div.col(data-bs-toggle="modal" data-bs-target="#exampleModal2")
+        div.col(data-bs-toggle="modal" data-bs-target="#guidedTourModal")
             div.card.project-card
-                img(src="./img/fog.jpg", class="project-card__image", alt="...", srcset="")
+                img(src="./img/ul_guided_tours.png", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
-                        h5.project-card__title.card-title.text-center Stepos
-                        p.project-card__text.card-text.text-center some text description
-        div.col(data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                        //- h5.project-card__title.card-title.text-center Ulyanovsk Guided Tours
+                        //- p.project-card__text.card-text.text-center Corse project with django backend and react frontend
+
+        div.col(data-bs-toggle="modal" data-bs-target="#solarSystemModal")
             div.card.project-card
-                img(src="./img/spacetour.jpg", class="project-card__image", alt="...", srcset="")
+                img(src="./img/solar_system_tour.png", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
-                        h5.project-card__title.card-title.text-center Space Tour 2189
-                        p.project-card__text.card-text.text-center some text description
-        div.col(data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                        //- h5.project-card__title.card-title.text-center Space Tour 2189
+                        //- p.project-card__text.card-text.text-center some text description
+
+        div.col(data-bs-toggle="modal" data-bs-target="#todoWithAIModal")
             div.card.project-card
-                img(src="./img/fog.jpg", class="project-card__image", alt="...", srcset="")
+                img(src="./img/todo_with_ai.png", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
-                        h5.project-card__title.card-title.text-center Personal page
-                        p.project-card__text.card-text.text-center some text description
-        div.col(data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                        //- h5.project-card__title.card-title.text-center Todo with ai
+                        //- p.project-card__text.card-text.text-center some text description
+
+        div.col(data-bs-toggle="modal" data-bs-target="#steposModal")
             div.card.project-card
-                img(src="./img/fog.jpg", class="project-card__image", alt="...", srcset="")
+                img(src="./img/stepos.png", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
-                        h5.project-card__title.card-title.text-center Film Base
-                        p.project-card__text.card-text.text-center some text description
-        div.col(data-bs-toggle="modal" data-bs-target="#exampleModal2")
+                        //- h5.project-card__title.card-title.text-center Film Base
+                        //- p.project-card__text.card-text.text-center some text description
+
+        div.col(data-bs-toggle="modal" data-bs-target="#kanbanBoardBackend")
             div.card.project-card
-                img(src="./img/fog.jpg", class="project-card__image", alt="...", srcset="")
+                img(src="./img/kanban_board_backend.png", class="project-card__image", alt="...", srcset="")
                 div.card-img-overlay.d-flex.align-items-center
                     div.project-card__content
-                        h5.project-card__title.card-title.text-center TODO list
-                        p.project-card__text.card-text.text-center some text description
+                        //- h5.project-card__title.card-title.text-center TODO list
+                        //- p.project-card__text.card-text.text-center some text description
         
