--- a/src/pug/chunk/aboutme.pug
+++ b/src/pug/chunk/aboutme.pug
@@ -3,5 +3,9 @@ div(class="aboutme")
         div(class="d-flex" data-aos="fade-up" data-aos-duration="1000")
             img(class="me-3 aboutme__profile-photo" src="./img/me2018.jpg", width="250px" height="250px" alt="photo of me", srcset="")
             div.right-block
-                h2.title About me
-                p.aboutme__text-info I have been living in Yerevan for two years, working as a full-stack Python developer specializing in Django. My professional skills include developing RESTful APIs, working with databases, and optimizing application performance. In my free time, I enjoy reading, watching movies and series, and occasionally hiking. I am inspired by music, movies, and nature, especially hiking in the mountains. I believe that through my projects, I can make the world a better place. My main personality trait is perseverance, which helps me achieve my goals and solve complex problems efficiently.
+                h2.title Обо мне
+                p.aboutme__text-info 
+                                    | Уже три года живу в Ереване и работаю full-stack Python-разработчиком, специализируясь на Django и современных веб-технологиях. Мой опыт включает разработку RESTful API, написание телеграм ботов, верстку с использованием javascript и проектирование эффективных схем баз данных.
+                                    | Ценю структурный подход и стремлюсь к коду, который решает задачу просто и логично.
+                                    | В свободное время читаю книги, смотрю фильмы и сериалы, иногда хожу в горы - там нахожу вдохновение и внутреннее равновесие. 
+                                    | Не сдаюсь, пока задача не решена - в этом моя привычка и сила.
