--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,35 +17,120 @@ block modal
     - 
         var modal_data = {
             id: "marketingBotModal", 
-            title: "Marketing Tg Bot", 
+            title: "Маркетинговый телеграм бот", 
             text: "Телеграм бот с административной частью в самом боте. Пользователь может подписаться, выбрав уровень подписки. Затем он может просмотреть материалы, установленные для каждого уровня подписки. Админ может через бота или через Django-admin настроить рассылку сообщений по времени и загрузить материалы для разных уровней подписки. Для получения обновлений от телеграмма использовался polling.",
-            img: [{src: "./img/fog.jpg", label: "first slide"}, {src: "./img/forest.jpg", label: "second slide"}]
+            img: []
         }
     include ./utils/modal
 
     - 
         var modal_data = {
             id: "doskiModal", 
-            title: "Catering network", 
+            title: "Сеть общественного питания", 
             text: "Разработка нового функционала, устранение багов, подключение к стороннему API, верстка по макетам из Figma. В проекте реализованы функции заказа доставки продуктов и бронирования столиков в ресторане с интерактивной схемой расположения столиков для каждого города. Менеджерская часть сайта позволяет обрабатывать и подтверждать бронирования. Пользователь может зарегистрироваться с использованием телефона в качестве имени пользователя и просматривать историю заказов в личном кабинете.",
-            img: [{src: "./img/fog.jpg", label: "first slide"}, {src: "./img/forest.jpg", label: "second slide"}]
+            img: []
         }
     include ./utils/modal
 
     - 
         var modal_data = {
             id: "alphardModal", 
-            title: "Huge Audio Distributor", 
+            title: "Крупный дистрибутор аудио оборудования", 
             text: "Реализация нового функционала как на фронтенде, так и на бекенде, устранение багов, подключение к стороннему API. В проекте реализованы функции просмотра и заказа аудио оборудования с детальными страницами продуктов, фотографиями, описанием, стоимостью доставки и комментариями пользователей. Включена быстрая регистрация по номеру телефона и подписка на рассылку по почте. В личном кабинете доступна история и статус заказов с возможностью отмены и изменения заказов. На сайте реализована система скидок и волн скидок, активируемых во время крупных акций, таких как Черная пятница. Celery используется для рассылки информации о статусе заказов, интеграции с 1C для отправки и получения статусов заказов, актуализации адресов пунктов выдачи и отправки заказов в транспортные компании. CI-CD автоматизировал тестирование и развертывание сайта при загрузке новых коммитов на продакшн и тестовые серверы. Docker использовался для контейнеризации и запуска Celery, базы данных и проекта на Django.",
-            img: [{src: "./img/fog.jpg", label: "first slide"}, {src: "./img/forest1280.jpg", label: "second slide"}]
+            img: []
         }
     include ./utils/modal
 
+    //- Portfolio modals 
     - 
         var modal_data = {
-            id: "exampleModal2", 
-            title: "Marketing Tg Bot", 
-            text: "Some text<br>Another paragraph",
-            img: [{src: "./img/fog.jpg", label: "first slide"}, {src: "./img/forest.jpg", label: "second slide"}]
+            id: "solarSystemModal", 
+            title: "Solar System Tour", 
+            text: `
+                <b>Интерактивный веб-проект для изучения солнечной системы.</b><br><br>
+                Создан для практики верстки, анимаций и манипуляций с DOM.<br>
+                Использует шаблонизатор <b>Pug</b> и сборщик <b>Gulp</b>.<br>
+                Настроен GitHub Actions.<br><br>
+                <i>Стек:</i> JavaScript, HTML, CSS, Gulp, Pug.
+            `,
+            img: [
+                {src: "./img/solar_system_tour/1.png", label: "first slide"}, 
+                {src: "./img/solar_system_tour/2.png", label: "first slide"}, 
+                {src: "./img/solar_system_tour/3.png", label: "first slide"}, 
+                {src: "./img/solar_system_tour/4.png", label: "first slide"}, 
+                ]
+        }
+    include ./utils/modal
+
+    -
+        var modal_data = {
+            id: "guidedTourModal", 
+            title: "Ulyanovsk Guided Tours", 
+            text: `
+                Курсовой проект — интерактивный сайт-путеводитель по городу <b>Ульяновску</b>.<br>
+                <br>Использует <b>Yandex.Maps API</b> для отображения маршрутов и точек интереса.<br>
+                При клике на каждую точку можно узнать подробную информацию о достопримечательностях.<br>
+                <br><i>Стек:</i> Django, React, Bootstrap 5, Yandex.Maps API.
+            `,
+            img: [
+                {src: "./img/ul_guided_tours/1.png", label: "first slide"},
+                {src: "./img/ul_guided_tours/2.png", label: "first slide"},
+                {src: "./img/ul_guided_tours/3.png", label: "first slide"},
+            ]
+        }
+    include ./utils/modal
+
+    -
+        var modal_data = {
+            id: "todoWithAIModal", 
+            title: "Todo with AI", 
+            text: `
+                <b>AI-планировщик задач</b> с интеграцией OpenAI API.<br><br>
+                <ul>
+                  <li>Генерация и редактирование списков дел по пользовательскому запросу (через ChatGPT).</li>
+                  <li>Создание/обновление задач, приоритетов и дедлайнов в диалоговом формате.</li>
+                  <li><b>TDD:</b> интеграционные и функциональные тесты на <code>pytest</code>.</li>
+                </ul>
+                <i>Стек:</i> Flask, PostgreSQL, SQLAlchemy, Jinja2, Docker, Docker Compose, pytest.
+            `,
+            img: [
+                {src: "./img/todo_with_ai/1.jpg", label: "first slide"},
+                {src: "./img/todo_with_ai/2.jpg", label: "first slide"},
+                {src: "./img/todo_with_ai/3.jpg", label: "first slide"},
+                {src: "./img/todo_with_ai/4.jpg", label: "first slide"}
+                ]
+        }
+    include ./utils/modal
+
+    -
+        var modal_data = {
+            id: "steposModal", 
+            title: "STEPOS", 
+            text: `
+                Дипломный проект колледжа — аналог образовательной платформы <b>Stepik</b>.<br>
+                <br>Пользователь может создавать курсы, добавлять теорию, видео и тесты.<br>
+                Есть возможность проходить тесты и оставлять комментарии к каждому пункту урока.<br>
+                <br><i>Стек:</i> Django, React, Bootstrap 5.
+            `,
+            img: [
+                {src: "./img/stepos/1.png", label: "first slide"}, 
+                {src: "./img/stepos/2.png", label: "second slide"},
+                {src: "./img/stepos/3.png", label: "third slide"},
+                {src: "./img/stepos/4.png", label: "third slide"}
+                ]
+        }
+    include ./utils/modal
+
+    -
+        var modal_data = {
+            id: "kanbanBoardBackend", 
+            title: "Kanban Board Backend", 
+            text: `
+                Учебный проект для практики проектирования <b>REST API</b>.<br>
+                <br>Представляет собой серверную часть системы управления задачами 
+                с документированной API через <b>Swagger</b>.<br>
+                <br><i>Стек:</i> Django, Django REST Framework, Swagger.
+            `,
+            img: []
         }
     include ./utils/modal
