--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -60,8 +60,11 @@ body {
         padding: 0;
         text-align: center;
         font-weight: 700;
-        color: #10e3ba;
-        text-shadow: rgb(0, 0, 0) 1px 0 10px;
+        // color: #10e3ba;
+        color: transparent;
+        -webkit-text-stroke: .1px yellow;
+        text-shadow: #af3903 1px 0 10px;;
+        // text-shadow: rgb(0, 0, 0) 1px 0 10px;
     }
     &__inner-layout {
         height: 100%;
@@ -75,7 +78,7 @@ body {
         animation-name: rise;
         animation-duration: 2s;
         height: 3px;
-        background-color: #8df7df;
+        background-color: yellow;
         width: 0%;
         box-shadow: 0 0 7px 1px white;
     }
